fix width and alignment of feature subsection images

--- a/src/styles.css
+++ b/src/styles.css
@@ -390,10 +390,12 @@ a {
 .feature {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .feature-img {
     order: -1;
+    width: 30%;
 }
 
 /* ====================
